include/multipass/dart_ffi.h

#pragma once

extern "C"
{

// Ownership convention:
// - `const char*` is borrowed and must not be freed by the recipient.
// - `char*` transfers ownership to the recipient, which must free it when no longer needed.

const char* multipass_version();

char* generate_petname();

char* get_server_address();

struct KeyCertificatePair
{
    char* pem_cert;
    char* pem_priv_key;
};

struct KeyCertificatePair get_cert_pair();

char* get_root_cert();

void free_ffi_string(char* string);

enum SettingResult
{
    Ok,
    KeyNotFound,
    InvalidValue,
    UnexpectedError,
};

char* settings_file();

enum SettingResult get_setting(const char* key, char** output);

enum SettingResult set_setting(const char* key, const char* value, char** output);

int uid();

int gid();

int default_id();

long long memory_in_bytes(const char* value);

char* human_readable_memory(long long bytes);

long long get_total_disk_size();

char* default_mount_target(const char* source);
}